Fixed horizontal alignment of the text on the footer

--- a/app/styles/themes/main.scss
+++ b/app/styles/themes/main.scss
@@ -1423,7 +1423,6 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  margin-bottom: 0;
   z-index: 100;
 }
 
